packages/typ/tests/fixtures/diagnostics/0894_gadt_eval_bool_branch_mismatch_04.ml.expected
File "0894_gadt_eval_bool_branch_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0894_gadt_eval_bool_branch_mismatch_04 is not a valid module name.

File "0894_gadt_eval_bool_branch_mismatch_04.ml", line 7, characters 20-21:
7 |   | Bool_delta b -> 3
                        ^
Error: The constant 3 has type int but an expression was expected of type
         a = bool
